Added Blog File

--- a/mudra_streamlit_app/mudra_word_mapping.json
+++ b/mudra_streamlit_app/mudra_word_mapping.json
@@ -668,7 +668,7 @@
         {
             "word": "Kachagraha",
             "translations": [
-                "Grasping one’s hair"
+                "Grasping one's hair"
             ]
         },
         {
@@ -760,7 +760,7 @@
         {
             "word": "Samarana",
             "translations": [
-                "Recollection Abhinayaanthikam – Intimate suggestion"
+                "Recollection Abhinayaanthikam - Intimate suggestion"
             ]
         },
         {
